--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-vector-icons": "^8.1.0",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.10",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
